--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
---- 
+---
+
+import Footer from '../components/Footer.astro';
+
 interface Props {
 	title: string;
 }
@@ -7,17 +10,18 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -26,14 +30,29 @@ const { title } = Astro.props;
 		--accent-light: 224, 204, 250;
 		--accent-dark: 49, 10, 101;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), rgb(var(--accent-light)) 30%, white 60%);
+		--font-color: #333333;
+		--space-x5: 20px;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151A;
-		background-size: 224px;
+		//background: #13151A;
+		//background-size: 224px;
+	}
+	body {
+		margin: 0;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
+	}
+	.container {
+		max-width: calc(1200px + var(--space-x5) * 2);
+		margin-inline: auto;
+		padding-inline: var(--space-x5);
+	}
+	img {
+		display: block;
+		max-width: 100%;
+		height: auto;
 	}
 </style>
