feat(index):メインビジュアル

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,16 @@ const { title } = Astro.props;
 		--accent-dark: 49, 10, 101;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), rgb(var(--accent-light)) 30%, white 60%);
 		--font-color: #333333;
+		--space-x1: 4px;
+		--space-x2: 8px;
+		--space-x3: 12px;
+		--space-x4: 16px;
 		--space-x5: 20px;
+		--space-x6: 24px;
+		--space-x7: 28px;
+		--space-x8: 32px;
+		--space-x9: 36px;
+		--space-x10: 40px;
 	}
 	html {
 		font-family: system-ui, sans-serif;
