--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const stores = await res.json();
 // console.log(stores);
 ---
 
-<Layout title="日本酒ゴーアラウンド大阪2023 公式サイト">
+<Layout title="">
 	<main>
 		<div class="main-visual">
 			<div class="main-visual__stage">
@@ -157,7 +157,7 @@ const stores = await res.json();
 			<ul class="store-list" role="list">
 				{
 					stores.map((store:any) => (
-						<li class="store-item"><a href={`/blog/${store.slug}`} class="store-link"><span class="store-number">{store.acf.store_number}</span>{store.title.rendered}</a></li>
+						<li class="store-item"><a href={`/store/${store.slug}`} class="store-link"><span class="store-number">{store.acf.store_number}</span>{store.title.rendered}</a></li>
 					))
 				}
 			</ul>
@@ -370,13 +370,12 @@ const stores = await res.json();
 	main {
 		margin: auto;
 		color: var(--font-color);
-		line-height: 1.75;
 	}
 	.main-visual {
 		position: relative;
 		display: grid;
-		height: 100vh;
-		height: 100svh;
+		height: calc(100vh - 60px);
+		height: calc(100svh - 60px);
 		max-height: 760px;
 		overflow: hidden;
 		background: url(/assets/images/logo.svg) no-repeat center/200px;
@@ -908,7 +907,7 @@ const stores = await res.json();
 		padding: var(--space-x3)  var(--space-x2);
 		color: inherit;
 		text-decoration: none;
-		pointer-events: none;
+		//pointer-events: none;
 		background-color: rgba(255,255,255,.7);
 	}
 	.store-number {
