--- a/src/pages/store/[slug].astro
+++ b/src/pages/store/[slug].astro
@@ -53,6 +53,7 @@ type Post = {
     }]
   }
 };
+
 const { slug } = Astro.params;
 
 export async function getStaticPaths() {
@@ -67,10 +68,67 @@ export async function getStaticPaths() {
     }
   ))
 }
-
+const author = {
+  2: {
+    name: '深井中野酒本店',
+    slug: 'fukainakano',
+  },
+  3: {
+    name: '酒屋へちかん',
+    slug: 'hechikan',
+  },
+  4: {
+    name: '井上酒店',
+    slug: 'inoue',
+  },
+  5: {
+    name: '日本酒セラーHARETOKE',
+    slug: 'haretoke',
+  },
+  6: {
+    name: 'SAKEBOXさかした',
+    slug: 'sakashita',
+  },
+  7: {
+    name: '酒蔵なかやま',
+    slug: 'nakayama',
+  },
+  8: {
+    name: '酒やのまえだ',
+    slug: 'maeda',
+  },
+  9: {
+    name: '山中酒の店',
+    slug: 'yamanaka',
+  },
+  10: {
+    name: '杉本商店',
+    slug: 'sugimoto',
+  },
+  11: {
+    name: '十徳日本酒販売所',
+    slug: 'juttoku',
+  },
+  13: {
+    name: '酒のはしもと',
+    slug: 'hashimoto',
+  },
+  14: {
+    name: '今仲酒店',
+    slug: 'inamanaka',
+  },
+  15: {
+    name: '生島商店',
+    slug: 'ikushima',
+  },
+  16: {
+    name: '木になる酒店 tane',
+    slug: 'tane',
+  }
+}
 const store = Astro.props.post;
-console.log(store);
-console.log(store._embedded);
+// console.log(store);
+// console.log(store._embedded);
 const eyeCatch = store._embedded['wp:featuredmedia'] ? store._embedded['wp:featuredmedia'][0]
   : {
     source_url: 'https://data.nga-osaka.com/2023/wp-content/uploads/2023/08/preparation-image16-9.jpg',
@@ -79,14 +137,349 @@ const eyeCatch = store._embedded['wp:featuredmedia'] ? store._embedded['wp:featu
       height: '1280',
     }
   };
+const facebook = store.acf.facebook_url ? `<li><a href="${store.acf.facebook_url}" target="_blank"><img src="/assets/images/sns-facebook.png" alt="Facebook" width="36" height="36" loading="lazy"></a></li>` : '';
+const twitter = store.acf.twitter_url ? `<li><a href="${store.acf.twitter_url}" target="_blank"><img src="/assets/images/sns-x.svg" alt="X(Twitter)" width="36" height="36" loading="lazy"></a></li>` : '';
+const instagram = store.acf.instagram_url ? `<li><a href="${store.acf.instagram_url}" target="_blank"><img src="/assets/images/sns-instagram.png" alt="Instagram" width="36" height="36" loading="lazy"></a></li>` : '';
+
+const snsList = (facebook || twitter || instagram) ? `<ul>${facebook + twitter + instagram}</ul>` : '';
+const googleMapSrc = `https://maps.google.co.jp/maps?output=embed&q=${store.acf.store_name}&z=16`;
 ---
 
-<Layout title={store.title.rendered}>
+<Layout title={ store.title.rendered }>
   <main>
-    <h1 set:html={store.title.rendered} />
-    <p set:html={store.content.rendered} />
-    <img src={eyeCatch.source_url} alt={store.acf.store_name} width={eyeCatch.media_details.width} height={eyeCatch.media_details.height} decoding="async">
-    <p set:html={store.acf.store_description}></p>
-    <p set:html={store.acf.sake_description}></p>
+    <div class="store-visual">
+      <img src="/assets/images/tokkuri-tokyo.png" class="store-visual__tokkuri-image" width="721" height="1249" alt="">
+      <img src={eyeCatch.source_url} alt={store.acf.store_name} class="store-visual__image" width={eyeCatch.media_details.width} height={eyeCatch.media_details.height} decoding="async">
+    </div>
+    <div class="container">
+      <h1><span set:html={store.acf.store_number} />{store.title.rendered}</h1>
+      <p set:html={store.content.rendered} />
+      <section>
+        <div class="store-decriptionBox">
+          <h2 class="store-decriptionBox__title">店舗説明</h2>
+          <div class="store-decriptionBox__inner">
+            <p set:html={store.acf.store_description} />
+            <svg width="100%" height="100%" class="store-decriptionBox__border">
+              <rect
+                      width="100%"
+                      height="100%"
+                      fill="none"
+                      stroke="gray"
+                      stroke-width="3"
+              />
+            </svg>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="store-decriptionBox">
+          <h2 class="store-decriptionBox__title">酒造・銘柄説明</h2>
+          <div class="store-decriptionBox__inner">
+            <p set:html={store.acf.sake_description} />
+            <svg width="100%" height="100%" class="store-decriptionBox__border">
+              <rect
+                      width="100%"
+                      height="100%"
+                      fill="none"
+                      stroke="gray"
+                      stroke-width="3"
+              />
+            </svg>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <dl class="store-spec">
+          <div class="store-spec__group">
+            <dt class="store-spec__term">付け出し</dt>
+            <dd class="store-spec__description">{store.acf.appetizer_name}</dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">料金</dt>
+            <dd class="store-spec__description">{store.acf.appetizer_price1.toLocaleString()}円</dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">サービス酒</dt>
+            <dd class="store-spec__description">{store.acf.sake_service}[{store.acf.sake_pref}]</dd>
+          </div>
+          <!--<div class="store-spec__group">-->
+          <!--  <dt class="store-spec__term">お酒のタイプ</dt>-->
+          <!--  <dd class="store-spec__description"></dd>-->
+          <!--</div>-->
+          <!--<div class="store-spec__group">-->
+          <!--  <dt class="store-spec__term">提供温度</dt>-->
+          <!--  <dd class="store-spec__description"></dd>-->
+          <!--</div>-->
+          <div class="store-spec__group">
+            <dt class="store-spec__term">開催時間</dt>
+            <dd class="store-spec__description">{store.acf.event_start}〜{store.acf.event_end}</dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">収容人数</dt>
+            <dd class="store-spec__description">立食 {store.acf.capacity_standing}名/着席 {store.acf.capacity_sitting}名/合計 {Number(store.acf.capacity_standing) + Number(store.acf.capacity_sitting)}名</dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">住所</dt>
+            <dd class="store-spec__description">
+              <p><span class="u-display-block">〒{store.acf.store_zip}</span>
+                <span class="u-display-block">{store.acf.store_address1}</span>
+              <span class="u-display-block">{store.acf.store_address2}</span></p>
+              <p>最寄り駅：{store.acf.store_route}・{store.acf.store_station}</p>
+              <div>
+                <iframe width="600" height="450" class="googlemap" src={googleMapSrc}></iframe>
+              </div>
+            </dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">電話番号</dt>
+            <dd class="store-spec__description">{store.acf.store_tel}</dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">Webサイト</dt>
+            <dd class="store-spec__description"><a href={store.acf.store_url} target="_blank">{store.acf.store_url}</a></dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">SNS</dt>
+            <dd class="store-spec__description"><ul class="sns-list" set:html={facebook + twitter + instagram} /></dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">担当酒販店</dt>
+            <dd class="store-spec__description">{author[store.author].name}</dd>
+          </div>
+        </dl>
+      </section>
+    </div>
   </main>
 </Layout>
+
+<script>
+  import gsap from 'gsap';
+  import { ScrollTrigger } from "gsap/ScrollTrigger";
+  import { CustomEase } from "gsap/CustomEase";
+
+  gsap.registerPlugin(CustomEase);
+  gsap.registerPlugin(ScrollTrigger);
+  gsap.timeline({ repeat: 0, repeatDelay: 0.5 })
+    .to(".store-visual__tokkuri-image", {duration: 0.5, rotate: '-110deg', translate: "50% -50%"})
+    .to(".store-visual__image", { maskSize: '200% 130%', maskPosition: '100% bottom', duration: 2,
+      ease: CustomEase.create("custom", "M0,0 C0.126,0.382 0.105,0.438 0.298,0.34 0.478,0.248 0.614,0.839 0.7,0.8 0.928,0.696 0.871,1 1,1 ")});
+
+  gsap.utils.toArray('.store-decriptionBox__title')
+    .forEach((item) => {
+      gsap.fromTo(item,
+        { x: '-100%', opacity: 0},
+        { x: '0%', opacity: 1,
+          scrollTrigger:{
+            trigger:item,
+            start:'top 80%',
+            end:'bottom 20%',
+            toggleActions:'play none none reverse',
+          }});
+    });
+
+  gsap.utils.toArray('.store-decriptionBox__border>rect')
+    .forEach((item) => {
+      gsap.to(item,
+        {
+          strokeDashoffset: '0',
+          ease: 'linear',
+          duration: 0.7,
+          scrollTrigger: {
+            trigger: item.parentNode,
+            start: 'top 80%',
+            end: 'bottom 20%',
+            toggleActions: 'play none none reverse',
+          }
+        });
+    });
+
+  gsap.utils.toArray('.store-decriptionBox__inner')
+    .forEach((item) => {
+      gsap.to(item,
+        {
+          maskSize: '100% 130%',
+          ease: 'linear',
+          duration: 0.7,
+          scrollTrigger: {
+            trigger: item.parentNode,
+            start: 'top 80%',
+            end: 'bottom 20%',
+            toggleActions: 'play none none reverse',
+          }
+        });
+    });
+</script>
+<style lang="scss">
+    @use "sass:color";
+
+    main {
+        background: url(/assets/images/section-store-bg.jpg);
+    }
+  .store-visual {
+      position: relative;
+      display: grid;
+      grid-template: "storeVisual" 1fr
+      / 1fr;
+      place-items: center;
+      height: 300px;
+      @media (min-width: 576px) {
+          height: 400px;
+      }
+      @media (min-width: 768px) {
+          height: 500px;
+      }
+      @media (min-width: 992px) {
+          height: 700px;
+      }
+  }
+  .store-visual__tokkuri-image {
+      position: absolute;
+      grid-area: storeVisual;
+      width: 50px;
+  }
+  .store-visual__image {
+      position: absolute;
+      grid-area: storeVisual;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      -webkit-mask-image: url(/assets/images/wave-mask.png);
+      mask-image: url(/assets/images/wave-mask.png);
+      -webkit-mask-size: 200% 0%;
+      mask-size: 200% 0%;
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+      -webkit-mask-position: left bottom;
+      mask-position: left bottom;
+  }
+  h1 {
+      display: flex;
+      gap: var(--space-x2);
+      width: fit-content;
+      margin: 0 calc(50% - 50vw) 0 auto;
+      padding: var(--space-x2);
+      background-color: rgba(255,255,255,.8);
+      font-size: clamp(20px, 3vw, 30px);
+      line-height: 1.5;
+      transform: translateY(-50%);
+      &>span {
+          display: inline-flex;
+          justify-content: center;
+          align-items: center;
+          min-width: 1.75em;
+          height: 1.75em;
+          padding-bottom: 0.1em;
+          color: white;
+          border-radius: 50%;
+          background-color: var(--color-sub-accent);
+      }
+      @media (min-width: 768px) {
+          padding: var(--space-x4) 1.5em;
+      }
+  }
+  .store-decriptionBox__title {
+      position: absolute;
+      margin: 0 auto 0 calc(var(--space-x5) * -1);
+      padding: var(--space-x2) var(--space-x5);
+      background-color: var(--color-sub-accent);
+    background-image: linear-gradient(-90deg, var(--color-sub-accent) 0%, color.scale(#1D2A82, $lightness: -25%) 80%, color.scale(#1D2A82, $lightness: -15%) 100%);
+    color: white;
+      z-index: 1;
+      transform: translateY(-50%);
+      &::before,
+      &::after {
+          content: '';
+          position: absolute;
+          top: 5px;
+          left: 5px;
+          width: 100%;
+          height: 100%;
+          border: 1px solid white;
+      }
+      &::after {
+          top: 6px;
+          left: 6px;
+          border-color: var(--color-sub-accent);
+      }
+  }
+  .store-decriptionBox {
+      position: relative;
+      max-width: 800px;
+      margin-top: var(--space-x20);
+      margin-inline: auto;
+  }
+    .store-decriptionBox__inner {
+        padding: var(--space-x10) var(--space-x5) var(--space-x5);
+        background-color: rgba(255,255,255,.75);
+        -webkit-mask-image: linear-gradient(transparent,#000000 10%, #000000);
+        mask-image: linear-gradient(transparent,#000000 10%, #000000);
+    //-webkit-mask-image: url(/assets/images/wave-mask.svg);
+    //mask-image: url(/assets/images/wave-mask.svg);
+        -webkit-mask-size: 100% 0%;
+        mask-size: 100% 0%;
+        -webkit-mask-position: left bottom;
+        mask-position: left bottom;
+        -webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+    }
+    .store-decriptionBox__border {
+        position: absolute;
+        inset: 0;
+        overflow: visible;
+        &>rect {
+            width: 100%;
+            height: 100%;
+            stroke: var(--color-sub-accent);
+            stroke-dasharray:400%;
+            stroke-dashoffset:400%;
+        }
+    }
+
+    .store-spec {
+        margin: var(--space-x8) auto 0;
+        //max-width: 800px;
+    }
+    .store-spec__group {
+        display: grid;
+        grid-template: 1fr / .3fr 1fr;
+        border: 1px solid #ddd;
+        &:not(:nth-of-type(1)) {
+            border-top: 0;
+        }
+    }
+    .store-spec__term {
+        padding: var(--space-x3) var(--space-x4);
+        background-color: var(--color-sub-accent);
+        background-image: linear-gradient(-90deg, var(--color-sub-accent) 0%, color.scale(#1D2A82, $lightness: -25%) 80%, color.scale(#1D2A82, $lightness: -15%) 100%);
+        color: white;
+        @media (min-width: 768px) {
+            padding: var(--space-x4) var(--space-x8);
+        }
+
+    }
+    .store-spec__description {
+        margin-left: 0;
+        padding: var(--space-x3) var(--space-x4);
+        background-color: rgba(255,255,255,.8);
+        >* {
+            margin-top: 0;
+        }
+        @media (min-width: 768px) {
+            padding: var(--space-x4) var(--space-x8);
+        }
+    }
+    .sns-list {
+        display: flex;
+        gap: var(--space-x4);
+        margin: 0;
+    }
+    .googlemap {
+        width: 100%;
+        height: 300px;
+        border: 1px solid #ddd;
+        @media (min-width: 768px) {
+            height: 400px;
+        }
+    }
+
+  </style>
