--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,6 +136,7 @@ const stores = await res.json();
 					</h3>
 					<div class="box-contents__inner">
 						<ul>
+							<li>2023.08.27 参加店舗の画像を公開しました。振る舞い酒の都道府県を修正しました。</li>
 							<li>2023.08.25 参加店舗ページを公開しました。</li>
 							<li>2023.08.13 日本酒ゴーアラウンド2023 大阪公式サイトオープンしました。</li>
 						</ul>
